# PneumocylinderConfigurator

./: .gitignore  CMakeLists.txt  PneumocylinderConfigurator.sln  README.md
CreateInstaller/: Deploy.bat
PneumocylinderConfigurator/: BuildMathModel.cpp  BuildMathModel.h  BuildParams.h  BuildTestMathModel.cpp  BuildTestMathModel.h  Build_Assembly.cpp  Build_Base.cpp  Build_Bolt.cpp  Build_Brass_Collar.cpp  Build_Clamping_Bar.cpp  Build_Create_O_Ring.cpp  Build_Main_Body.cpp  Build_Seal_Housing.cpp  Build_Shaft.cpp  Build_ShaftPivot.cpp  Build_Socket_Head_Collar.cpp  Build_Socket_Head_Locking_CollarInsert.cpp  Build_Top_Guide.cpp  CMakeLists.txt  FileController.cpp  FileController.h  MainWindow.cpp  MainWindow.h  MainWindow.qrc  MainWindow.ui  ParamsWidget.cpp  ParamsWidget.h  ParamsWidget.ui  PneumocylinderConfigurator.cpp  PneumocylinderConfigurator.h  PneumocylinderConfigurator.ui  PneumocylinderConfigurator.vcxproj  PneumocylinderConfigurator.vcxproj.filters  SceneParams.h  Viewer.cpp  Viewer.h  colorDef.h  main.cpp  testmodelbuild.cpp  testmodelbuild.h
QtVision/: CMakeLists.txt  QtVision.vcxproj
